Hover over <dt> displays info in a fixed sidebar. List collapses when parent is clicked. List starts with all children shown.

--- a/geostyle2.css
+++ b/geostyle2.css
@@ -3,20 +3,21 @@
 	top: 0;
 }
 #details {
-	position: absolute;
-	width: 50%;
-	top: 0;
-	right: 0;
-	background: #abf;
 }
 #main-list {
 	width: 50%;
 }
-#eons .hidden {
+.hideme {
 	display: none;
 }
-#eons .shown {
+.shown {
 	display: block;
-
+	position: fixed;
+	width: 50%;
+	top: 0;
+	right: 0;
+	background: #a85;
 }
-#eons dd { display: none; }
+.child-shown {
+	display: block;
+}
